putting all backups and autosaves to a separate subdirectory of .emacs.d

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 #ignore folder with auto-saves
 auto-save-list/
-#ignore all auto-saves
-*~
+#ignore all autosaves
+.autosaves
+#ignoring all backups
+.backups
+#ignoring locally downloaded elpa packages
+elpa
+elpa/*
