* splitted monolithic init.el file into a bunch of well-isolated modules * added non-versioned platform.el file for platform-dependent config variables * added platform.example.el as a reference for the platform dependent configs

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ auto-save-list/
 .autosaves
 #ignoring all backups
 .backups
+#ignoring platform-specific config, see platform.example.el for details
+platform.el
