* ignored elpa packages in init dir * added installation info for jedi python package

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ auto-save-list/
 .backups
 #ignoring platform-specific config, see platform.example.el for details
 platform.el
+#ignoring elpa packages directory
+elpa/
